[package]
name = "as_any_min"
version = "1.0.2"
authors = ["liambloom <liamrbloom@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/liambloom/as_any_min"
description = "A minuscule rust library that allows trait objects to be easily upcast to Any"
readme = "README.md"
keywords = ["no_std", "upcast", "any", "trait-objects"]
categories = ["no-std"]